fix header whitespace

--- a/styles/_blurb.sass
+++ b/styles/_blurb.sass
@@ -3,7 +3,7 @@
     position: absolute
     z-index: 1
     width: 900px
-    top: 50%
+    top: calc(50% - 40px)
     left: 50%
     margin-top: -100px
     margin-left: -450px
